<resources>
    <string name="app_name" translatable="false">Yourdays</string>

    <!-- Months -->
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string-array name="moths_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- Days -->
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>

    <!-- Number -->
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>

    <!-- Emotions -->
    <string name="worry">worry</string>
    <string name="happiness">happiness</string>
    <string name="sadness">sadness</string>
    <string name="productivity">productivity</string>

    <string name="worry_emoji" translatable="false">😖</string>
    <string name="happiness_emoji" translatable="false">🤩</string>
    <string name="sadness_emoji" translatable="false">🙁</string>
    <string name="productivity_emoji" translatable="false">😎</string>

    <!-- Toast -->
    <string name="cant_change_error_toast">Sorry, you can\'t change the past</string>

    <!-- Messages -->
    <string name="how_was_the_day">How was the day?</string>
    <string name="click_to_fill">click to fill</string>
    <string name="click_to_change_emotion">click to change emotion</string>
    <string name="enter_month">ENTER MONTH</string>
    <string name="enter_date">ENTER DATE</string>

    <string name="upload_to_stories">UPLOAD TO STORIES</string>
    <string name="upload">UPLOAD</string>
    <string name="upload_background">upload background image</string>
    <string name="or_choose_color_text">or choose background color:</string>
    <string name="month">MONTH</string>
    <string name="day">DAY</string>

    <string name="ok_text">OK</string>

    <!-- Errors -->
    <string name="unexpected_error">Sorry, an unexpected error has occurred, we are already trying to fix it</string>
    <string name="file_system_error">Filesystem error, make sure you have enough space in internal storage</string>
    <string name="instagram_not_installed_error">Oh, looks like you don\'t have instagram installed, please install and try again</string>
    <string name="day_not_filled_error">Error: please, choose filled day :)</string>


    <!-- Onboarding -->
    <string name="next_button_first_screen_text">It\'s clear</string>
    <string name="next_button_second_screen_text">OK</string>
    <string name="next_button_third_screen_text">MAYBE</string>
    <string name="plus_shape_description">good</string>
    <string name="zero_shape_description">ok</string>
    <string name="minus_shape_description">not well</string>
    <string name="onboarding_hello_message">Hello,\nwelcome to</string>
    <string name="onboarding_app_decription">this is an app where you can track how your days go</string>
    <string name="onboarding_shapes_description">you can evaluate the past day using three types of shapes:</string>
    <string name="onboarding_emotion_progress_description">You can also choose how you feel throughout the day</string>
    <string name="onboarding_month_preview_description">After that, your day will be saved and will be visible in the month:</string>
    <string name="onboarding_empty_animation_description">Days that you have not filled yet are displayed like this:</string>
    <string name="onboarding_export_to_stories_description">After filling day you can share how it went on instagram by selecting the period:</string>


    <string name="emotion_progress_default_text" translatable="false">0/10</string>

    <string name="app_watermark" translatable="false">yourdays app</string>
</resources>