<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners">

    <TextView
        android:id="@+id/card_period_month_name"
        style="@style/Text14sp.Spacing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/january"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/week_first_markup"
        style="@style/Text12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        app:layout_constraintBottom_toBottomOf="@id/card_period_month_first_week"
        app:layout_constraintEnd_toStartOf="@id/card_period_month_first_week"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/card_period_month_first_week" />

    <LinearLayout
        android:id="@+id/card_period_month_first_week"
        android:layout_width="291dp"
        android:layout_height="33dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_period_month_name">

        <FrameLayout
            android:id="@+id/first_week_mon"
            android:layout_width="33dp"
            android:layout_height="33dp" />

        <FrameLayout
            android:id="@+id/first_week_tue"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/first_week_wed"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/first_week_thu"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/first_week_fri"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/first_week_sat"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/first_week_sun"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/week_second_markup"
        style="@style/Text12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        app:layout_constraintBottom_toBottomOf="@id/card_period_month_second_week"
        app:layout_constraintEnd_toStartOf="@id/card_period_month_second_week"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/card_period_month_second_week" />

    <LinearLayout
        android:id="@+id/card_period_month_second_week"
        android:layout_width="291dp"
        android:layout_height="33dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_period_month_first_week">

        <FrameLayout
            android:id="@+id/second_week_mon"
            android:layout_width="33dp"
            android:layout_height="33dp" />

        <FrameLayout
            android:id="@+id/second_week_tue"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/second_week_wed"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/second_week_thu"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/second_week_fri"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/second_week_sat"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/second_week_sun"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/week_third_markup"
        style="@style/Text12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        app:layout_constraintBottom_toBottomOf="@id/card_period_month_third_week"
        app:layout_constraintEnd_toStartOf="@id/card_period_month_third_week"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/card_period_month_third_week" />

    <LinearLayout
        android:id="@+id/card_period_month_third_week"
        android:layout_width="291dp"
        android:layout_height="33dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_period_month_second_week">

        <FrameLayout
            android:id="@+id/third_week_mon"
            android:layout_width="33dp"
            android:layout_height="33dp" />

        <FrameLayout
            android:id="@+id/third_week_tue"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/third_week_wed"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/third_week_thu"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/third_week_fri"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/third_week_sat"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/third_week_sun"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/week_fourth_markup"
        style="@style/Text12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        app:layout_constraintBottom_toBottomOf="@id/card_period_month_fourth_week"
        app:layout_constraintEnd_toStartOf="@id/card_period_month_fourth_week"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/card_period_month_fourth_week" />

    <LinearLayout
        android:id="@+id/card_period_month_fourth_week"
        android:layout_width="291dp"
        android:layout_height="33dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_period_month_third_week">

        <FrameLayout
            android:id="@+id/fourth_week_mon"
            android:layout_width="33dp"
            android:layout_height="33dp" />

        <FrameLayout
            android:id="@+id/fourth_week_tue"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/fourth_week_wed"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/fourth_week_thu"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/fourth_week_fri"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/fourth_week_sat"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/fourth_week_sun"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/week_fifth_markup"
        style="@style/Text12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        app:layout_constraintBottom_toBottomOf="@id/card_period_month_fifth_week"
        app:layout_constraintEnd_toStartOf="@id/card_period_month_fifth_week"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/card_period_month_fifth_week" />

    <LinearLayout
        android:id="@+id/card_period_month_fifth_week"
        android:layout_width="291dp"
        android:layout_height="33dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_period_month_fourth_week">

        <FrameLayout
            android:id="@+id/fifth_week_mon"
            android:layout_width="33dp"
            android:layout_height="33dp" />

        <FrameLayout
            android:id="@+id/fifth_week_tue"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/fifth_week_wed"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/fifth_week_thu"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/fifth_week_fri"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/fifth_week_sat"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />

        <FrameLayout
            android:id="@+id/fifth_week_sun"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/card_period_days_markup"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_period_month_fifth_week">

        <TextView
            android:id="@+id/markup_day_mon"
            style="@style/Text10sp.Center"
            android:layout_width="33dp"
            android:layout_height="wrap_content"
            android:text="@string/mon" />

        <TextView
            android:id="@+id/markup_day_tue"
            style="@style/Text10sp.Center"
            android:layout_width="33dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/tue" />

        <TextView
            android:id="@+id/markup_day_wed"
            style="@style/Text10sp.Center"
            android:layout_width="33dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/wed" />

        <TextView
            android:id="@+id/markup_day_thu"
            style="@style/Text10sp.Center"
            android:layout_width="33dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/thu" />

        <TextView
            android:id="@+id/markup_day_fri"
            style="@style/Text10sp.Center"
            android:layout_width="33dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/fri" />

        <TextView
            android:id="@+id/markup_day_sat"
            style="@style/Text10sp.Center"
            android:layout_width="33dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/sat" />

        <TextView
            android:id="@+id/markup_day_sun"
            style="@style/Text10sp.Center"
            android:layout_width="33dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/sun" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>